@@ -751,6 +751,11 @@ class HttpStatusCheck(StatusCheck):
     def check_category(self):
         return "HTTP check"
 
+    @classmethod
+    def _check_content_pattern(self, text_match, content):
+        content = content if isinstance(content, unicode) else unicode(content, "UTF-8")
+        return re.search(text_match, content)
+
     def _run(self):
         result = StatusCheckResult(status_check=self)
 
@@ -778,7 +783,7 @@ class HttpStatusCheck(StatusCheck):
                 result.succeeded = False
                 result.raw_data = resp.content
             elif self.text_match:
-                if not re.search(self.text_match, resp.content):
+                if not self._check_content_pattern(self.text_match, resp.content):
                     result.error = u'Failed to find match regex /%s/ in response body' % self.text_match
                     result.raw_data = resp.content
                     result.succeeded = False
