@@ -1,3 +1,9 @@
+master
+------
+
+* [[#556](https://github.com/arachnys/cabot/issues/556)] Fix issue with HttpStatusCheck with unicode content
+
+
 Version 0.11.7
 --------------
 
